--- a/addon/templates/components/x-dragula.hbs
+++ b/addon/templates/components/x-dragula.hbs
@@ -1,1 +1,7 @@
-{{yield}}
+{{yield (hash
+  container=(component "x-dragula-container"
+    drake=drake
+    on-init=(action "addChild")
+    on-destroy=(action "removeChild")
+  )
+)}}
