Added ember-cli-github-pages addon

--- a/addon/templates/components/x-dragula.hbs
+++ b/addon/templates/components/x-dragula.hbs
@@ -1,7 +1,7 @@
 {{yield (hash
   container=(component "x-dragula-container"
     drake=drake
-    on-init=(action "addChild")
+    on-insert=(action "addChild")
     on-destroy=(action "removeChild")
   )
 )}}
